added controller and test for insertUser

--- a/ClientiWebService/src/main/resources/application.properties
+++ b/ClientiWebService/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+# ===============================================================
+# = Clienti Web Service - versione base Reactor Web Flux
+# ===============================================================
+server.port = 5071
 
+spring.application.name=ClientiWebService
+
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.database=gestFid
+spring.data.mongodb.host=localhost
+spring.data.mongodb.password=123_Stella
+spring.data.mongodb.port=27017
+spring.data.mongodb.username=webClient
+
+logging.level.org.springframework.data.mongodb.core=debug
